# Rag-pipeline-pdf

./: .gitignore  README.md  pyproject.toml  requirements.txt
Rag-pipeline-pdf/: README.md
data/vector_store/7cf1883e-8904-4e2e-973c-13a38b01070d/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
